style as .css file instead

--- a/style.css
+++ b/style.css
@@ -1,18 +1,33 @@
-html, body {
-  height: 100%;
-  overflow: hidden;
+body {
+  background-color: #FFFFE0;
 }
+
 h1 {
   text-align: center;
 }
 section {
-  width:100%;
+  width: 100%;
+  text-align: justify;
 }
+
 textarea, iframe {
   display: inline-block;
-  width: 49%;
+  width: 24.5%;
+  margin: 0;
+  padding: 0;
   height: 400px;
   border: 1px solid black;
+  overflow-x: scroll;
+  font-size: 90%;
+  font-family: monospace;
+  background-color: white;
 }
-textarea { float: left; }
-iframe { float: right; }
+
+.textblock {
+  width: 800px;
+  margin: auto;
+  margin-bottom: 1em;
+  border: 1px solid brown;
+  background-color: #FFFFF0;
+  padding: 0 0.5em;
+}
